--- a/ecommerce.less
+++ b/ecommerce.less
@@ -70,6 +70,28 @@
         margin-left: auto;
         margin-right: auto;
     }
+
+    .header {
+        width: 100%;
+        margin-left: 20px;
+
+        h1 {
+            font-size: 36px;
+            display: inline;
+        }
+
+        h2 {
+            margin-left: 15px;
+            display: inline;
+            color: green;
+            font-size: 28px;
+        }
+    }
+
+    
+    .btn-group {
+        margin-left: 30px !important;
+    }
 }
 
 .controls {
