--- a/ecommerce.less
+++ b/ecommerce.less
@@ -106,7 +106,10 @@
     .btn {
         height: @controls_height;
         padding: 20px 0;
+    }
 
+    .requester {
+        padding: 20px;
     }
 
     .req_ctrl_btn {
