--- a/ecommerce.less
+++ b/ecommerce.less
@@ -19,7 +19,7 @@
     right: 0;
     bottom: @controls_height;
     background: rgba(255, 255, 255, 0);
-    z-index: 9999;
+    z-index: 999999999999;
 }
 
 .login {
@@ -36,6 +36,7 @@
     right: 0;
     bottom: @controls_height;
     height: @chooser_height;
+    z-index: 999999;
     background: white;
     overflow: visible;
     box-shadow: inset 0px 4px 3px rgba(50, 50, 50, 0.25);
@@ -102,6 +103,7 @@
     right: 0;
     height: @controls_height;
     background: green;
+    z-index: 99999;
 
     .btn {
         height: @controls_height;
