--- a/ecommerce.less
+++ b/ecommerce.less
@@ -27,7 +27,7 @@
     top: 0;
     left: 0;
     margin: 10px;
-    z-index: 9999999999999;
+    z-index: 9999999999999999999;
 }
 
 .chooser {
@@ -44,16 +44,24 @@
 
 .chooser_button {
     margin-top: 10px;
-    margin-right: 23px;
+    //margin-right: 23px;
 
     p {
-        width: 60px;
         text-align: center;
         padding: 5px;
 
     }
 
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        background: blue;
+    }
+
     .selected {
+        padding: 5px;
         background: rgba(0, 0, 55, .3);
         .rounded
     }
@@ -73,17 +81,16 @@
     }
 
     .header {
-        width: 100%;
-        margin-left: 20px;
+        margin-top: -40px;
 
         h1 {
             font-size: 26px;
-            display: inline;
+            text-align: center;
         }
 
         h2 {
-            margin-left: 5px;
-            display: inline;
+            margin-top: -15px;
+            text-align: center;
             color: green;
             font-size: 24px;
         }
@@ -91,7 +98,8 @@
 
 
     .btn-group {
-        margin-left: 35px !important;
+        margin-left: auto !important;
+        margin-right: auto !important;
         z-index: 2;
     }
 }
@@ -127,7 +135,7 @@
     right: 0;
     text-align: center;
     background: rgba(0, 0, 0, .2);
-    z-index: 99999999999999999;
+    z-index: 99999999;
 
     .btn {
         margin-top: 175px;
@@ -171,8 +179,8 @@
     bottom:0;
     left:10px;
     right:10px;
-    // -moz-border-radius:100px / 10px;
-    // border-radius:100px / 10px;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
 }
 
 .curved-hz-2:before {
