--- a/ecommerce.less
+++ b/ecommerce.less
@@ -66,12 +66,16 @@
 }
 
 .product_list {
-    width: 100%;
     background: white;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
 }
 
 .product_stack {
-    width: 100%;
+
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+
     .product_image {
         display: block;
         margin-left: auto;
@@ -95,10 +99,15 @@
     }
 
 
-    .btn-group {
-        margin-left: auto !important;
-        margin-right: auto !important;
-        z-index: 2;
+    .grid-100 {
+        padding-left: 5px !important;
+        padding-right: 5px !important;
+
+        .grid-25, .mobile-grid-25 {
+            padding-left: 0px !important;
+            padding-right: 0px !important;
+        }
+
     }
 }
 
